--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,18 @@
-@import url(https://fonts.googleapis.com/css?family=Source+Code+Pro);
-
-
 body{
     font-size: 14px;
     font-weight: 400, 700;
-    background-color: hsl(232, 19%, 15%);
-    font-family: sans-serif;
+    background-color: hsl(0, 0%, 100%);
+    font-family: 'Inter';
+}
+
+header{
+    background-color: hsl(225, 100%, 98%);
+    padding: 0 1.5rem;
+    padding-top: 2rem;
+    padding-bottom: 50px;
+    /* display: flex; */
+    /* flex-direction: row;
+    justify-content: space-between; */
 }
 
 .followers{
@@ -13,6 +20,7 @@ body{
     text-transform: uppercase;
     letter-spacing: 4px;
     font-size: 13px;
+    color: hsl(228, 12%, 44%);
     
 }
 
@@ -20,72 +28,131 @@ body{
     color: hsl(228, 34%, 66%);
 }
 
-span{
+.dark{
     float: right;
 }
 
 div{
-    background-color: hsl(228, 28%, 20%);
+    background-color: hsl(227, 47%, 96%);
     border-radius: 2%;
-    width: 200px;
+    width: 240px;
     height: 150px;
     display: inline-block;
     text-align: center;
-    color: hsl(228, 34%, 66%);
+    color: hsl(230, 17%, 14%);
     padding: 20px;
-    margin-left: 50px;
+    margin-left: 20px;
+    transition: .4s;
 }
 
 .div2{
-    width: 200px;
+    width: 240px;
     height: 60px;
-    display: inline-table;
+    /* display: inline-table; */
     margin-bottom: 5px;
+    padding: 20px;
+    margin-bottom: 10px;
 }
 
 h1, h2{
-    color: hsl(0, 0%, 100%);
+    color: black;
     font-size: 30px;
 }
 
+.card2{
+    display: flex;
+    justify-content: space-between;
+
+}
+
+h2{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    display: inline;
+}
+
+.number-card2{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 20px;
+    font-weight: bold;
+}
+
 .day-green{
+    color: hsl(163, 72%, 41%);
     font-size: 15px;
 }
 
 .day-red{
+    color: hsl(356, 69%, 56%);
     font-size: 15px;
+}
+
+.facebook{
+    border-top: solid; 
+    border-color: hsl(195, 100%, 50%);
+}
+
+.twitter{
+    border-top: solid; 
+    border-color: hsl(203, 89%, 53%);
+}
+
+.instagram{
+    border-top: solid; 
+    border-image: linear-gradient(to right, hsl(37, 97%, 70%) 0%, hsl(329, 70%, 58%) 100%);
+    border-image-slice: 1;
+}
+
+.youtube{
+    border-top: solid; 
+    border-color: hsl(348, 97%, 39%);
 }
 
 .attribution{
     font-size: 13px;
-    color: white;
+    color: black;
     padding-top: 15px;
 }
 
-/* White Mode */
-.white-mode{
-    background-color: white;
+/* -------- Dark Mode -------- */
+.dark-mode{
+    background-color: hsl(230, 17%, 14%);
 }
 
-.white-mode div{
-    background-color: hsl(230, 22%, 74%);
-    color: black;
+.dark-mode header{
+    background-color: hsl(232, 19%, 15%);
 }
 
-.white-mode p{
-    color: black;
+.dark-mode div{
+    background-color: hsl(228, 28%, 20%);
+    color: hsl(228, 34%, 66%);
 }
 
-.white-mode h1{
-    color: black;
+.dark-mode p{
+    color: hsl(228, 34%, 66%);
 }
 
-.white-mode footer{
-    color: black;
+.dark-mode h1{
+    color: hsl(0, 0%, 100%);
 }
 
-.white-mode h2{
-    color: black;
+.dark-mode footer{
+    color: white;
+}
+
+.dark-mode h2{
+    color: hsl(0, 0%, 100%);
+}
+
+.dark-mode .day-green{
+    color: hsl(163, 72%, 41%);
+}
+
+.dark-mode .day-red{
+    color: hsl(356, 69%, 56%);
 }
 
 /* Toggle Button */
@@ -100,7 +167,7 @@ label {
 	text-indent: -9999px;
 	width: 40px;
 	height: 20px;
-	background: grey;
+	background: rgb(196, 187, 187);
 	display: inline-block;
 	border-radius: 100px;
     position: relative;
@@ -120,7 +187,7 @@ label:after {
 }
 
 input:checked + label {
-	background: #72df50;
+	background: hsl(163, 72%, 41%);
 }
 
 input:checked + label:after {
